fix: Some fixes and try to fix scroll issues

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="apple-mobile-web-app-title" content="Creary Cardio" />
-    <meta name="description" content="Something" />
+    <meta
+      name="description"
+      content="Calendar for managing treadmill bookings in the Creary household!"
+    />
+    <meta name="robots" content="noindex, nofollow" />
     <!-- Open Graph Meta Tags -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://crearycardio.matthewcollett.ca" />
     <meta property="og:title" content="Creary Cardio" />
-    <meta property="og:description" content="Something" />
-    <!-- <meta property="og:image" content="https://crearycardio.matthewcollett.ca/images/preview.jpg" /> -->
+    <meta
+      property="og:description"
+      content="Calendar for managing treadmill bookings in the Creary household!"
+    />
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="/favicons/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicons/favicon.svg" />
